--- a/website/site-static/sass/apps/scheduler.sass
+++ b/website/site-static/sass/apps/scheduler.sass
@@ -631,7 +631,12 @@ input.autocomplete
   cursor: default
 
 .tg-today
-  background-color: #f1f1f1
+  //background-color: #f1f1f1
+  background-color: rgba(50, 201, 3, 0.12)
+
+.tg-weekend
+  background-color: rgba(3, 3, 3, 0.03)
+  //background-color: greenyellow
 
 .bg-exists .tg-today
   background-color: #eee
