--- a/website/apps/alibrary/templates/alibrary/media/list_item_s.html
+++ b/website/apps/alibrary/templates/alibrary/media/list_item_s.html
@@ -149,7 +149,13 @@
     <div class="list_body_item c4">
         <ul class="unstyled">
             <li>{{ item.base_duration|sec_to_time }}</li>
-            <li>{{ item.base_format|upper }} | {{ item.base_filesize|filesizeformat }}</li>
+            <li>
+                {% if item.conversion_status == 0 %}<i class="icon icon-refresh icon-spin"></i> {% endif %}
+                {% if item.conversion_status == 2 %}<i class="icon-warning-sign"></i> {% endif %}
+                {% if item.conversion_status == 99 %}<i class="icon-warning-sign"></i> {% endif %}
+                {% if item.base_format %}{{ item.base_format|upper }}{% else %}ERROR{% endif %}
+                {% if item.base_filesize %}| {{ item.base_filesize|filesizeformat }}{% endif %}
+            </li>
         </ul>
 
     </div>
