--- a/website/apps/alibrary/templates/alibrary/artist_edit.html
+++ b/website/apps/alibrary/templates/alibrary/artist_edit.html
@@ -86,7 +86,7 @@
 {% block form %}
     <div class="item_inner">
 
-        <form class="form-horizontal form-compact form-release" method="post" id="" enctype="multipart/form-data">
+        <form class="form-horizontal form-compact form-artist" method="post" id="" enctype="multipart/form-data">
 
             {{ form.management_form }}
             {{ relation_form.management_form }}
