--- a/website/apps/alibrary/templates/alibrary/label/_detail_info.html
+++ b/website/apps/alibrary/templates/alibrary/label/_detail_info.html
@@ -88,7 +88,7 @@
 
 		{% if object.address %}
 		<dt>
-			{% trans "Contact" %}:
+			{% trans "Address" %}:
 		</dt>
 		<dd>
 			<ul class="unstyled">
