--- a/website/apps/alibrary/templates/alibrary/playlist/list_item_s.html
+++ b/website/apps/alibrary/templates/alibrary/playlist/list_item_s.html
@@ -109,9 +109,11 @@
             <li>
                 {{ item.get_type_display }}
             </li>
+            {% if item.type == 'broadcast' %}
             <li class="small">
                 {{ item.get_status_display }}
             </li>
+            {% endif %}
         </ul>
     </div>
 
