--- a/website/apps/alibrary/templates/alibrary/playlist_edit.html
+++ b/website/apps/alibrary/templates/alibrary/playlist_edit.html
@@ -51,7 +51,16 @@
                 $('.dayparts input:checked').parents('li').addClass("selected");
                 $('.dayparts input').css('display', 'none');
                 $('.dayparts input').live('click', function (e) {
+
+                    var num_selected = $('.dayparts input:checked').length;
+                    if(num_selected > 14) {
+                        alert('Sorry - no more than 14 dayparts please!');
+                        //$(util).dialog({text: 'No more than 14 dayparts please!', title: 'Sorry'})
+                        return false;
+                    }
+
                     $(this).parents('li').toggleClass('selected');
+
                 });
 
 
