--- a/website/apps/alibrary/templates/alibrary/release_detail.html
+++ b/website/apps/alibrary/templates/alibrary/release_detail.html
@@ -220,13 +220,12 @@
         </div>
 
         <div class="item relations">
-            {% relations_inline object %}
+            {% all_relations_inline object %}
         </div>
 
 
     </div>
 
-    <!-- relations -->
 
 
 
