--- a/website/site-static/sass/site/_type.sass
+++ b/website/site-static/sass/site/_type.sass
@@ -31,7 +31,7 @@ h1, h2, h3, h4, h5, h6
   // Fix the character spacing for headings
   small
     font-weight: normal
-    color: $grayLight
+    color: #aaaaaa
 
 h1
   font-size: $baseFontSizeH1
