--- a/website/apps/alibrary/templates/alibrary/release/list_item_s.html
+++ b/website/apps/alibrary/templates/alibrary/release/list_item_s.html
@@ -64,11 +64,18 @@
         </ul>
     </div>
     <div class="list_body_item c3">
+
+        <ul class="unstyled">
+            <li><span>{{ item.get_media.count }}</span>{% if item.totaltracks %}<span class="small"> of {{ item.totaltracks }}</span>{% endif %}</li>
+        </ul>
+
+        {% comment %}
         <ul class="unstyled indicator">
 
             {% include "alibrary/element/_track_indicator.html" %}
 
         </ul>
+        {% endcomment %}
     </div>
     <div class="list_body_item c4">
         <ul class="unstyled">
